add alarm function

--- a/UWPDebugging/UWPDebugging.csproj
+++ b/UWPDebugging/UWPDebugging.csproj
@@ -142,6 +142,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\AlarmToast.xaml.cs">
+      <DependentUpon>AlarmToast.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\FileAudioGraph.xaml.cs">
       <DependentUpon>FileAudioGraph.xaml</DependentUpon>
     </Compile>
@@ -180,6 +183,11 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\BadgeLogo.scale-100.png" />
+    <Content Include="Assets\BadgeLogo.scale-125.png" />
+    <Content Include="Assets\BadgeLogo.scale-150.png" />
+    <Content Include="Assets\BadgeLogo.scale-200.png" />
+    <Content Include="Assets\BadgeLogo.scale-400.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-125.png" />
     <Content Include="Assets\LargeTile.scale-150.png" />
@@ -254,6 +262,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\AlarmToast.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\FileAudioGraph.xaml">
       <SubType>Designer</SubType>
